# Legend-of-Krya

./: .gitignore  CMakeLists.txt  README.md  buildenv.sh
assets/: pacman.ase
include/: game.hpp  player.hpp
src/: game.cpp  main.cpp  player.cpp
